hphp/hack/test/typecheck/inout/bad_inout_decl_special_destruct.php.exp
File "bad_inout_decl_special_destruct.php", line 4, characters 3-7:
Method C::__destruct cannot accept any arguments (Parsing[1002])
File "bad_inout_decl_special_destruct.php", line 4, characters 36-37:
Methods with special semantics cannot have inout parameters. (NastCheck[3043])
File "bad_inout_decl_special_destruct.php", line 4, characters 19-28:
Destructors are not supported in Hack; use other patterns like IDisposable/using or try/catch instead. (NastCheck[3056])
